Fixed the html commented message

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Git JavaScript</title>
 </head>
 <body>
-    
+    <h1>Git JavaScript</h1>
+    <!-- link to js file -->
     <script src="./script.js"></script>
 </body>
 </html>
